--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.3",
     "express": "^4.17.1",
     "express-hateoas-links": "^1.2.0",
     "joi": "^17.3.0",
